# temp-ctrl

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build-project
include/: application.h  defines.h  general.h  infra.h  io.h  sts_cfg.h  temperature.h  time.h  timer.h
include/devkit_pucrs/: serial.h
src/: CMakeLists.txt  Makefile  application.c  general.c  infra_pc.c  infra_pucrsDev.c  io_pc.c  io_pucrsDev.c  main.c  sts_cfg.c  temperature_pucrsDev.c  time_pc.c  time_pucrsDev.c  timer_pc.c  timer_pucrsDev.c
src/devkit_pucrs/: CMakeLists.txt  infra.c  io.c  serial.c  temperature.c  timer.c
src/pc/: CMakeLists.txt  infra.c  io.c  temperature.c  timer.c
test/: CMakeLists.txt  dummy.cc
