cmake_minimum_required(VERSION 2.6)
project (temp-ctrl)

####################################################################################################
# Subdirectories
####################################################################################################
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src)

